# MiraiCP

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  JNIHeader.cmd  LICENSE  MiraiCP.7z.REMOVED.git-id  README.md  README_en.md  index.html  javap2cpp.py
cpp/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  Procession.cpp  constants.h  cpp.hint  demo.cpp  dllmain.cpp  framework.h  jsoncpp.cpp  mirai-demo.vcxproj  mirai-demo.vcxproj.filters  org_example_mirai_plugin_CPP_lib.h  org_example_mirai_plugin_CPP_lib_Companion.h  pch.cpp  pch.h  tech_eritquearcus_miraicp_CPP_lib.h  tech_eritquearcus_miraicp_CPP_lib_Companion.h  tools.cpp  tools.h
cpp/3rd_include/polym/: Msg.hpp  Queue.hpp
cpp/buildScript/: addinclude.py  combineSource.py  config.json  generate.py  prologue  readme.md
cpp/buildScript/amalgamation/: amalgamation.py  cpp_process.py  header.py  patterns.py  source.py
cpp/buildScript/oldFiles/: addinclude.py
cpp/cmake/jni/: CMakeLists.txt
cpp/cmake/pthread/: CMakeLists.txt  cmake_CheckCancel.cpp  cmake_CheckGetName.cpp  cmake_CheckSetName.cpp
cpp/cmake/static/: CMakeLists.txt
cpp/cmake/termux/: CMakeLists.txt  cmake_CheckApiLevel.cpp
cpp/demo/: MiraiCP-core.cpp  test.cpp  test.h  test_multi.cpp  test_single.cpp
cpp/demo/include/: CMakeLists.txt
cpp/demo/multi_include/: demo.cpp  test2.cpp
cpp/demo/single_include/: test2.cpp
cpp/docweb/html/: _xE5_x9B_xBE_xE7_x89_x87mirai_code_xE4_xBE_x8B_xE5_xAD_x90-example.html  class_bot.html  class_bot_event-members.html  class_bot_exception.html  class_contact.js  class_contact_a190dd1c2ecfccf67edc3d2b1cff87835_icgraph.md5  class_friend_a24d5d1e22b735f5f78ac30da904bbc73_cgraph.md5  class_friend_exception-members.html  class_friend_exception__coll__graph.map  class_group_message_event__inherit__graph.map  class_group_temp_message_event__coll__graph.map  class_group_temp_message_event__inherit__graph.md5  class_image__coll__graph.map  class_init_exception-members.html  class_light_app.html  class_logger__coll__graph.map  class_low_level_a_p_i.js  class_member_exception-members.html  class_member_exception__inherit__graph.md5  class_member_join_event__coll__graph.map  class_member_join_event__coll__graph.md5  class_member_join_event__inherit__graph.map  class_member_join_event__inherit__graph.md5  class_member_leave_event.js  class_mirai_c_p_exception.html  class_new_friend_request_event__coll__graph.map  class_new_friend_request_event_a2adcb8c617896fc0eaf799f4bacaf0f0_cgraph.map  class_new_friend_request_event_ac43dae75ba441bbc690f6c25d7c3ecfc_cgraph.map  class_private_message_event-members.html  class_private_message_event.js  class_private_message_event__coll__graph.map  class_private_message_event__inherit__graph.map  class_private_message_event__inherit__graph.md5  class_recall_event__coll__graph.md5  class_recall_exception-members.html  class_remote_file__inherit__graph.map  class_remote_file_exception-members.html  class_remote_file_exception.html  class_scheduling_event.html  class_scheduling_event.js  (+22 more)
cpp/docweb/latex/: class_a_p_i_exception__coll__graph.md5  class_bot_event.tex  class_config.tex  class_contact_a220e55b907d54958cd2afb95e65da5a1_icgraph.md5  class_event_1_1_node_handle.tex  class_forward_message.tex  class_friend_a24d5d1e22b735f5f78ac30da904bbc73_cgraph.md5  class_friend_exception__inherit__graph.md5  class_group_invite_event__coll__graph.md5  class_low_level_a_p_i_a34e8b356a0298a68876c21b64373d5af_icgraph.md5  class_low_level_a_p_i_ac6e830ba53c3477de726793a26357256_icgraph.md5  class_low_level_a_p_i_ad285de08b2fb584b482db3e0144c1196_icgraph.md5  class_member_join_event.tex  class_mirai_c_p_exception__coll__graph.md5  class_mirai_codeable.tex  class_private_message_event.tex  class_private_message_event__coll__graph.md5  class_private_message_event__inherit__graph.md5  class_remote_file_exception.tex  classthread_manager_a807b673ce4d4199cf0bfdfff5521d2c0_cgraph.md5  struct_light_app_style1.tex
cpp/examples/: CMakeLists.txt  callbackHandle.cpp  command.cpp  examples.h  forwardedMessage.cpp  group.cpp  lightApp.cpp  logger.cpp  member.cpp  message.cpp  nextMessage.cpp  schedule.cpp  thread.cpp
cpp/include/: Bot.cpp  Bot.h  CMakeLists.txt  CPPPlugin.cpp  CPPPlugin.h  Command.cpp  Command.h  Config.cpp  Config.h  Contact.cpp  Contact.h  Event.cpp  Event.h  Exception.cpp  Exception.h  ExceptionBroadcasting.cpp  ExceptionBroadcasting.h  Forward.cpp  Forward.h  ForwardMessage.cpp  ForwardMessage.h  ForwardedMessage.cpp  ForwardedMessage.h  Friend.cpp  Friend.h  Group.cpp  Group.h  Logger.cpp  Logger.h  LowLevelAPI.cpp  LowLevelAPI.h  Member.cpp  Member.h  MessageChain.cpp  MessageChain.h  MessageSource.cpp  MessageSource.h  MiraiCP.hpp  MiraiCode.cpp  MiraiCode.h  (+17 more)
cpp/include/common/: JsonTools.h  MiraiCPMacros.h  MiraiCPStringInternal.h  PlatformThreading.h  PluginConfig.h  ThreadIdentify.h  WindowsMin.h  commonTools.h  commonTypes.h  loaderApiInternal.h
cpp/include/jni/: jni.h  jvmti.h
cpp/include/libloader/: BS_thread_pool.hpp  JNIEnvManager.h  JNIEnvs.h  LoaderExceptions.h  LoaderMacro.h  Plugin.h  PluginListManager.h  loaderTools.h
cpp/include/miraicp/: Doxyfile  dllmain.cpp  tech_eritquearcus_miraicp_shared_CPP_lib.h
cpp/include/sdk/: Bot.h  CPPPlugin.h  Command.h  Contact.h  Event.h  Exception.h  ForwardedMessage.h  Friend.h  Group.h  KtOperation.h  Logger.h  Member.h  MessageChain.h  MessageSource.h  MiraiCP.hpp  MiraiCPNewThread.h  MiraiCPSchedule.h  MiraiCode.h  SdkType.h  SingleMessage.h  ThreadTask.h  Tools.h  loaderApi.h  utils.h
cpp/include/test/: CMakeLists.txt  test.cpp  test2.cpp
cpp/miraicp-core/: core.cpp  core.h
cpp/mockTest/: .gitignore  mockTestEntrance.cpp  mockTests.cpp  mockTests.h  runMock.py
cpp/single_include/MiraiCP/: MiraiCP.cpp  MiraiCP.hpp
cpp/src/: CMakeLists.txt
cpp/src/common/: JNIEnvManager.cpp  JNIEnvManager.h  MiraiCPMacros.h  MiraiCPStringInternal.cpp  MiraiCPStringInternal.h  MsgDefine.h  PlatformThreading.cpp  PlatformThreading.h  PluginConfig.cpp  PluginConfig.h  PrivateMacros.h  (+12 more)
cpp/tests/: CMakeLists.txt
(+2199 files in other folders)
