# -- Test --
include(FetchContent)
FetchContent_Declare(
        googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG release-1.12.1
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)
add_compile_options(-DGOOGLE_TEST)
enable_testing()
include(GoogleTest)
add_subdirectory(plugin/multi)
# -- end test --